# src/main/kotlin/invoice/management/system/entities/EuerSection.kt
@@ -1,0 +1,13 @@
+package invoice.management.system.entities
+
+enum class EuerSection {
+    BETRIEBSEINNAHMEN,
+    WAREN_ROHSTOFFE_HILFSSTOFFE,
+    GERINGWERTIGE_WIRTSCHAFTSGUETER,
+    RECHTS_UND_STEUERBERATUNG,
+    BEITRAEGE_GEBUEHREN_ABGABEN_VERSICHERUNGEN,
+    ARBEITSMITTEL,
+    VERPACKUNG_TRANSPORT,
+    UEBRIGE_BETRIEBSAUSGABEN,
+    SONSTIGE_GRUNDSTUECKSAUFWENDUNGEN
+}
